--- a/css/main.css
+++ b/css/main.css
@@ -15,18 +15,19 @@ body {
     line-height: 1
 }
 
-ol, ul {
+/* 1 */
+/* ol, ul {
     list-style: none
-}
+} */
 
-blockquote, q {
+/* blockquote, q {
     quotes: none
-}
+} */
 
-blockquote:after, blockquote:before, q:after, q:before {
+/* blockquote:after, blockquote:before, q:after, q:before {
     content: '';
     content: none
-}
+} */
 
 table {
     border-collapse: collapse;
@@ -41,17 +42,17 @@ input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none
 }
 
-input[type=range]:focus {
+/* input[type=range]:focus {
     outline: 0
-}
+} */
 
-input[type=range]::-ms-track {
+/* input[type=range]::-ms-track {
     width: 100%;
     cursor: pointer;
     background: 0 0;
     border-color: transparent;
     color: transparent
-}
+} */
 
 input[type=range].song-range::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -77,7 +78,7 @@ input[type=range].volume-range::-webkit-slider-thumb {
     box-shadow: none
 }
 
-input[type=range].song-range::-moz-range-thumb {
+/* input[type=range].song-range::-moz-range-thumb {
     -webkit-appearance: none;
     border: none;
     height: 20px;
@@ -86,9 +87,9 @@ input[type=range].song-range::-moz-range-thumb {
     background: #d8d8d8;
     cursor: pointer;
     box-shadow: none
-}
+} */
 
-input[type=range].volume-range::-moz-range-thumb {
+/* input[type=range].volume-range::-moz-range-thumb {
     -webkit-appearance: none;
     border: none;
     height: 16px;
@@ -97,9 +98,9 @@ input[type=range].volume-range::-moz-range-thumb {
     background: #605757;
     cursor: pointer;
     box-shadow: none
-}
+} */
 
-input[type=range].song-range::-ms-thumb {
+/* input[type=range].song-range::-ms-thumb {
     -webkit-appearance: none;
     border: none;
     height: 20px;
@@ -108,9 +109,9 @@ input[type=range].song-range::-ms-thumb {
     background: #d8d8d8;
     cursor: pointer;
     box-shadow: none
-}
+} */
 
-input[type=range].volume-range::-ms-thumb {
+/* input[type=range].volume-range::-ms-thumb {
     -webkit-appearance: none;
     border: none;
     height: 16px;
@@ -119,7 +120,7 @@ input[type=range].volume-range::-ms-thumb {
     background: #605757;
     cursor: pointer;
     box-shadow: none
-}
+} */
 
 input[type=range].song-range::-webkit-slider-runnable-track {
     width: 100%;
@@ -141,15 +142,15 @@ input[type=range].volume-range::-webkit-slider-runnable-track {
     border: none
 }
 
-input[type=range].song-range:focus::-webkit-slider-runnable-track {
+/* input[type=range].song-range:focus::-webkit-slider-runnable-track {
     background: #979797
 }
 
 input[type=range].volume-range:focus::-webkit-slider-runnable-track {
     background: rgba(216, 216, 216, .3)
-}
+} */
 
-input[type=range].song-range::-moz-range-track {
+/* input[type=range].song-range::-moz-range-track {
     width: 100%;
     height: 1px;
     cursor: pointer;
@@ -157,9 +158,9 @@ input[type=range].song-range::-moz-range-track {
     background: #979797;
     border-radius: none;
     border: none
-}
+} */
 
-input[type=range].volume-range::-moz-range-track {
+/* input[type=range].volume-range::-moz-range-track {
     width: 100%;
     height: 4px;
     cursor: pointer;
@@ -167,9 +168,9 @@ input[type=range].volume-range::-moz-range-track {
     background: rgba(216, 216, 216, .3);
     border-radius: 2px;
     border: none
-}
+} */
 
-input[type=range].song-range::-ms-track {
+/* input[type=range].song-range::-ms-track {
     width: 100%;
     height: 1px;
     cursor: pointer;
@@ -177,9 +178,9 @@ input[type=range].song-range::-ms-track {
     background: #979797;
     border-radius: none;
     border: none
-}
+} */
 
-input[type=range].volume-range::-ms-track {
+/* input[type=range].volume-range::-ms-track {
     width: 100%;
     height: 4px;
     cursor: pointer;
@@ -187,9 +188,9 @@ input[type=range].volume-range::-ms-track {
     background: rgba(216, 216, 216, .3);
     border-radius: 2px;
     border: none
-}
+} */
 
-input[type=range]::-ms-fill-lower {
+/* input[type=range]::-ms-fill-lower {
     background: #2a6495;
     border: .2px solid #010101;
     border-radius: 2.6px;
@@ -198,8 +199,8 @@ input[type=range]::-ms-fill-lower {
 
 input[type=range]:focus::-ms-fill-lower {
     background: #3071a9
-}
-
+} */
+/*
 input[type=range]::-ms-fill-upper {
     background: #3071a9;
     border: .2px solid #010101;
@@ -209,7 +210,7 @@ input[type=range]::-ms-fill-upper {
 
 input[type=range]:focus::-ms-fill-upper {
     background: #367ebd
-}
+} */
 
 body, html {
     font-family: Arial;
@@ -309,10 +310,10 @@ footer {
     grid-row: span 3
 }
 
-.card_size_c {
+/* .card_size_c {
     grid-column: span 3;
     grid-row: span 2
-}
+} */
 
 .card {
     background: url("../img/cbg.webp");
@@ -326,17 +327,17 @@ footer {
     color: #fff;
     padding: 0
 }
-.logo {
+/* .logo {
     display: inline-block;
     width: 108px;
     height: 27px;
     position: relative;
-    /* background-image: url("./assets/logo.png"); */
+    background-image: url("./assets/logo.png");
     background-repeat: no-repeat;
     background-position: left top;
     background-size: cover;
-}
-.logo__ya {
+} */
+/* .logo__ya {
     display: block;
     position: absolute;
     z-index: 10;
@@ -345,8 +346,8 @@ footer {
     width: 69px;
     left: 0;
     top: 0;
-}
-.logo__ya-sub {
+} */
+/* .logo__ya-sub {
     display: block;
     position: absolute;
     z-index: 5;
@@ -355,16 +356,16 @@ footer {
     width: 100%;
     left: 0;
     top: 0;
-}
-.main {
+} */
+/* .main {
     height: 331px;
     border-radius: 20px;
     padding: 0 20px 0 25px;
     display: flex;
     justify-content: space-between;
-    /* background: url("assets/sh.png") center center/cover no-repeat; */
-}
-.main__greeting {
+    background: url("assets/sh.png") center center/cover no-repeat;
+} */
+/* .main__greeting {
     margin-top: 6px;
     font-size: 27px;
     font-weight: 700;
@@ -374,16 +375,16 @@ footer {
     padding-top: 20px;
     padding-left: 20px;
     background: rgba(255,255,255,0.6);
-}
-.main__panel {
+} */
+/* .main__panel {
     margin-bottom: 14px;
     position: relative;
 }
 .main__status {
     margin-top: 6px;
     line-height: 16px;
-}
-.main__upcoming {
+} */
+/* .main__upcoming {
     width: 220px;
     height: 100%;
     overflow-y: scroll;
@@ -392,8 +393,8 @@ footer {
     width: 200px;
     height: 100%;
     overflow: hidden;
-}
-.main__weather {
+} */
+/* .main__weather {
     margin-top: 25px;
 }
 .menu {
@@ -401,8 +402,8 @@ footer {
 }
 .menu__icon {
     display: none;
-}
-.menu__item {
+} */
+/* .menu__item {
     margin-right: 27px;
     font-size: 16px;
     font-weight: 700;
@@ -413,8 +414,8 @@ footer {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-.modal {
+} */
+/* .modal {
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -430,16 +431,16 @@ footer {
 }
 .modal_open {
     display: flex;
-}
-.modal_open .modal__content {
+} */
+/* .modal_open .modal__content {
     animation: modal 0.2s ease forwards;
 }
 .modal__title {
     font-size: 27px;
     font-weight: 700;
     margin-bottom: 6px;
-}
-.modal__value {
+} */
+/* .modal__value {
     box-sizing: content-box;
     position: absolute;
     top: 20px;
@@ -449,16 +450,16 @@ footer {
     max-width: 62px;
     height: 40px;
     padding-right: 32px;
-}
-.modal__value_temp {
+} */
+/* .modal__value_temp {
     background: url("assets/panel__icon_temp_on.svg") calc(100% + 10px) 0%/contain no-repeat;
 }
 .modal__value_light {
     height: 45px;
     padding-right: 45px;
     background: url("assets/panel__icon_light_off.svg") right center/contain no-repeat;
-}
-.modal__status {
+} */
+/* .modal__status {
     margin-bottom: 20px;
 }
 .modal__adjust {
@@ -466,8 +467,8 @@ footer {
 }
 .modal__button {
     width: 48.5%;
-}
-.modal__content {
+} */
+/* .modal__content {
     max-width: 640px;
     width: 100%;
 }
@@ -478,26 +479,26 @@ footer {
     margin-bottom: 15px;
     border-radius: 20px;
     background: #fff;
-}
-.modal__controls {
+} */
+/* .modal__controls {
     width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-@keyframes modal {
+} */
+/* @keyframes modal {
     from {
         transform: scale(0.2);
     }
 to-transform: scale(1);
-}
+} */
 * {
     box-sizing: border-box;
 }
 html {
     height: 100%;
 }
-.page {
+/* .page {
     height: 100%;
     font: 14px Arial, sans-serif;
     color: #333;
@@ -510,8 +511,8 @@ html {
     display: flex;
     flex-direction: column;
     height: 100%;
-}
-.page__wrapper-content {
+} */
+/* .page__wrapper-content {
     flex: 1 0 auto;
 }
 .paginator {
@@ -519,8 +520,8 @@ html {
     width: 47px;
     display: flex;
     justify-content: space-between;
-}
-.paginator div {
+} */
+/* .paginator div {
     width: 16px;
 }
 .paginator_hide {
@@ -529,8 +530,8 @@ html {
 .paginator__arrow {
     opacity: 1;
     cursor: pointer;
-}
-.paginator__arrow:hover {
+} */
+/* .paginator__arrow:hover {
     opacity: 0.5;
 }
 .paginator__arrow:active {
@@ -538,8 +539,8 @@ html {
 }
 .paginator__arrow_disabled {
     opacity: 0.3;
-}
-.panel {
+} */
+/* .panel {
     padding: 14px;
     min-height: 100px;
     width: 200px;
@@ -551,8 +552,8 @@ html {
     background: #f7f7f7;
     cursor: pointer;
     transition: opacity 0.3s ease-out;
-}
-.panel:hover {
+} */
+/* .panel:hover {
     background: #fff;
     box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.5);
 }
@@ -561,29 +562,29 @@ html {
 }
 .panel_device {
     height: 120px;
-}
-.panel_first {
+} */
+/* .panel_first {
     margin-top: 20px;
 }
 .panel_last {
     margin-bottom: 20px;
-}
-.panel__sub {
+} */
+/* .panel__sub {
     font-size: 12px;
     color: #858585;
 }
 .panel__title {
     font-weight: 700;
     margin-bottom: 4px;
-}
-.scenarios {
+} */
+/* .scenarios {
     max-height: 331px;
     background: #fff;
     display: flex;
     justify-content: flex-start;
     overflow-x: hidden;
-}
-.scenarios__page {
+} */
+/* .scenarios__page {
     display: grid;
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 100px);
@@ -596,8 +597,8 @@ html {
     position: absolute;
     top: 0;
     right: 40px;
-}
-.scenarios_hide {
+} */
+/* .scenarios_hide {
     display: none;
 }
 .weather {
@@ -605,8 +606,8 @@ html {
 }
 .weather__item {
     margin-right: 18px;
-}
-.weather__item-title {
+} */
+/* .weather__item-title {
     color: #858585;
     margin-bottom: 4px;
 }
@@ -620,9 +621,9 @@ html {
     padding-right: 31px;
 }
 .weather__item_cloud-drizzle {
-    /* background: url("assets/cloud-drizzle.png") 100% 70%/26px no-repeat; */
-}
-.stats {
+    background: url("assets/cloud-drizzle.png") 100% 70%/26px no-repeat;
+} */
+/* .stats {
     opacity: 0;
 }
 .panel__icon {
@@ -640,10 +641,10 @@ html {
 }
 .panel__icon_light_on {
     background: url("assets/panel__icon_light_on.svg") center center/contain no-repeat;
-}
-.panel__icon_clock {
+} */
+/* .panel__icon_clock {
     background: url("assets/panel__icon_clock.svg") center center/contain no-repeat;
-}
+} */
 
 .card-heading {
     display: flex;
@@ -867,7 +868,7 @@ html {
     overflow: scroll
 }
 
-.video-wrapper {
+/* .video-wrapper {
     min-height: 300px;
     position: relative
 }
@@ -882,12 +883,12 @@ html {
     z-index: 1;
     -webkit-filter: brightness(100%) contrast(100%);
     filter: brightness(100%) contrast(100%)
-}
+} */
 
-.video_active {
+/* .video_active {
     z-index: 10;
     background: #000
-}
+} */
 
 .video-controls-wrap {
     box-sizing: border-box;
@@ -908,9 +909,9 @@ html {
     transition: height .5s ease
 }
 
-.video-controls_active {
+/* .video-controls_active {
     height: 92px
-}
+} */
 
 .controls-text {
     float: left
@@ -919,19 +920,19 @@ html {
 .video-control {
     float: left
 }
-
+/*
 .video-volume {
-    /* background: url(../img/sound_n.png); */
+    background: url(../img/sound_n.png);
     background-size: cover;
     height: 40px;
     width: 40px;
     margin-left: 40px;
     cursor: pointer
-}
+} */
 
-.video-volume_unmuted {
+/* .video-volume_unmuted {
     background: green;
-    /* background: url(../img/sound.png); */
+    background: url(../img/sound.png);
     background-size: cover
 }
 
@@ -952,7 +953,7 @@ html {
     bottom: 40px;
     right: 40px;
     width: 60px
-}
+} */
 
 @media (max-width: 1230px) {
     .card_size_m {
@@ -1191,9 +1192,9 @@ html {
         padding-left: 20px
     }
 
-    .card-video {
+    /* .card-video {
         overflow: visible
-    }
+    } */
 
     .video-control {
         margin-right: 100px;
