--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,169 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.carousel-element {
+  overflow: hidden;
+}
+
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+footer, header {
+  display: block;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
+}
+
+h2, h3, h4 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+a {
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #0056b3;
+  text-decoration: underline;
+}
+
+a:not([href]):not([tabindex]) {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
+button {
+  border-radius: 0;
+}
+
+button {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button {
+  text-transform: none;
+}
+
+button {
+  -webkit-appearance: button;
+}
+
+button:not(:disabled),
+[type="button"]:not(:disabled),
+[type="reset"]:not(:disabled),
+[type="submit"]:not(:disabled) {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border-style: none;
+}
+
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button;
+}
+
+h2, h3, h4 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+.card {
+  position: relative;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border-radius: 0.25rem;
+}
+
+.card-title {
+  margin-bottom: 0;
+}
+
+header {
+  height: 93px;
+  box-sizing: border-box;
+  padding: 0 40px;
+  border-bottom: 1px solid #f0f0f0
+}
+
+.close:not(:disabled):not(.disabled):hover, .close:not(:disabled):not(.disabled):focus {
+  opacity: .75;
+}
+
+
+/* check */
 a,
-abbr,
-acronym,
-address,
-applet,
-article,
-aside,
-audio,
-b,
-big,
-blockquote,
 body,
-canvas,
-caption,
-center,
-cite,
-code,
-dd,
-del,
-details,
-dfn,
 div,
-dl,
-dt,
 em,
-embed,
-fieldset,
-figcaption,
-figure,
 footer,
-form,
-h1,
 h2,
 h3,
 h4,
-h5,
-h6,
-hgroup,
 html,
-i,
-iframe,
 img,
-ins,
-kbd,
-label,
-legend,
-li,
-mark,
 menu,
-nav,
-object,
-ol,
-output,
-p,
-pre,
-q,
-ruby,
-s,
-samp,
-section,
-small,
-span,
-strike,
-strong,
-sub,
-summary,
-sup,
-table,
-tbody,
-td,
-tfoot,
-th,
-thead,
-time,
-tr,
-tt,
-u,
-ul,
-var,
-video {
+p {
   margin: 0;
   padding: 0;
   border: 0;
@@ -86,45 +172,14 @@ video {
   vertical-align: baseline;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
-menu,
-nav,
-section {
+menu {
   display: block;
 }
 
 body {
   line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:after,
-blockquote:before,
-q:after,
-q:before {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
 }
 
 input[type='range'] {
@@ -404,11 +459,6 @@ footer {
   grid-row: span 3;
 }
 
-.card_size_c {
-  grid-column: span 3;
-  grid-row: span 2;
-}
-
 .card {
   background: url('../img/cbg.webp');
   color: #333;
@@ -421,323 +471,11 @@ footer {
   color: #fff;
   padding: 0;
 }
-.logo {
-  display: inline-block;
-  width: 108px;
-  height: 27px;
-  position: relative;
-  /* background-image: url("./assets/logo.png"); */
-  background-repeat: no-repeat;
-  background-position: left top;
-  background-size: cover;
-}
-.logo__ya {
-  display: block;
-  position: absolute;
-  z-index: 10;
-  outline: 0;
-  height: 100%;
-  width: 69px;
-  left: 0;
-  top: 0;
-}
-.logo__ya-sub {
-  display: block;
-  position: absolute;
-  z-index: 5;
-  outline: 0;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-}
-.main {
-  height: 331px;
-  border-radius: 20px;
-  padding: 0 20px 0 25px;
-  display: flex;
-  justify-content: space-between;
-  /* background: url("assets/sh.png") center center/cover no-repeat; */
-}
-.main__greeting {
-  margin-top: 6px;
-  font-size: 27px;
-  font-weight: 700;
-}
-.main__info {
-  width: 61.585%;
-  padding-top: 20px;
-  padding-left: 20px;
-  background: rgba(255, 255, 255, 0.6);
-}
-.main__panel {
-  margin-bottom: 14px;
-  position: relative;
-}
-.main__status {
-  margin-top: 6px;
-  line-height: 16px;
-}
-.main__upcoming {
-  width: 220px;
-  height: 100%;
-  overflow-y: scroll;
-}
-.main__upcoming-wrapper {
-  width: 200px;
-  height: 100%;
-  overflow: hidden;
-}
-.main__weather {
-  margin-top: 25px;
-}
-.menu {
-  margin-left: 52px;
-}
-.menu__icon {
-  display: none;
-}
-.menu__item {
-  margin-right: 27px;
-  font-size: 16px;
-  font-weight: 700;
-}
-.menu__list {
-  display: flex;
-  justify-content: flex-start;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.modal {
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background: rgba(51, 51, 51, 0.5);
-}
-.modal_open {
-  display: flex;
-}
-.modal_open .modal__content {
-  animation: modal 0.2s ease forwards;
-}
-.modal__title {
-  font-size: 27px;
-  font-weight: 700;
-  margin-bottom: 6px;
-}
-.modal__value {
-  box-sizing: content-box;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 36px;
-  font-weight: 700;
-  max-width: 62px;
-  height: 40px;
-  padding-right: 32px;
-}
-.modal__value_temp {
-  background: url('assets/panel__icon_temp_on.svg') calc(100% + 10px) 0% / contain no-repeat;
-}
-.modal__value_light {
-  height: 45px;
-  padding-right: 45px;
-  background: url('assets/panel__icon_light_off.svg') right center/contain no-repeat;
-}
-.modal__status {
-  margin-bottom: 20px;
-}
-.modal__adjust {
-  margin-top: 25px;
-}
-.modal__button {
-  width: 48.5%;
-}
-.modal__content {
-  max-width: 640px;
-  width: 100%;
-}
-.modal__body {
-  position: relative;
-  flex-shrink: 0;
-  padding: 25px;
-  margin-bottom: 15px;
-  border-radius: 20px;
-  background: #fff;
-}
-.modal__controls {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-@keyframes modal {
-  from {
-    transform: scale(0.2);
-  }
-  to-transform: scale(1);
-}
 * {
   box-sizing: border-box;
 }
 html {
   height: 100%;
-}
-.page {
-  height: 100%;
-  font: 14px Arial, sans-serif;
-  color: #333;
-  line-height: 1.143;
-  margin: 0 auto;
-  padding: 0;
-  width: 1366px;
-}
-.page__wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-.page__wrapper-content {
-  flex: 1 0 auto;
-}
-.paginator {
-  height: 16px;
-  width: 47px;
-  display: flex;
-  justify-content: space-between;
-}
-.paginator div {
-  width: 16px;
-}
-.paginator_hide {
-  display: none;
-}
-.paginator__arrow {
-  opacity: 1;
-  cursor: pointer;
-}
-.paginator__arrow:hover {
-  opacity: 0.5;
-}
-.paginator__arrow:active {
-  opacity: 0.3;
-}
-.paginator__arrow_disabled {
-  opacity: 0.3;
-}
-.panel {
-  padding: 14px;
-  min-height: 100px;
-  width: 200px;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-shrink: 0;
-  background: #f7f7f7;
-  cursor: pointer;
-  transition: opacity 0.3s ease-out;
-}
-.panel:hover {
-  background: #fff;
-  box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.5);
-}
-.panel:active {
-  box-shadow: none;
-}
-.panel_device {
-  height: 120px;
-}
-.panel_first {
-  margin-top: 20px;
-}
-.panel_last {
-  margin-bottom: 20px;
-}
-.panel__sub {
-  font-size: 12px;
-  color: #858585;
-}
-.panel__title {
-  font-weight: 700;
-  margin-bottom: 4px;
-}
-.scenarios {
-  max-height: 331px;
-  background: #fff;
-  display: flex;
-  justify-content: flex-start;
-  overflow-x: hidden;
-}
-.scenarios__page {
-  display: grid;
-  grid-template-columns: repeat(3, 200px);
-  grid-template-rows: repeat(3, 100px);
-  grid-column-gap: 15px;
-  grid-row-gap: 15px;
-  justify-content: space-between;
-  margin-right: 15px;
-}
-.scenarios__paginator {
-  position: absolute;
-  top: 0;
-  right: 40px;
-}
-.scenarios_hide {
-  display: none;
-}
-.weather {
-  display: flex;
-}
-.weather__item {
-  margin-right: 18px;
-}
-.weather__item-title {
-  color: #858585;
-  margin-bottom: 4px;
-}
-.weather__item-temp {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.16;
-  font-family: 'PT Sans Narrow', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-.weather__item_outside {
-  padding-right: 31px;
-}
-.weather__item_cloud-drizzle {
-  /* background: url("assets/cloud-drizzle.png") 100% 70%/26px no-repeat; */
-}
-.stats {
-  opacity: 0;
-}
-.panel__icon {
-  width: 24px;
-  height: 24px;
-}
-.panel__icon_temp_off {
-  background: url('assets/panel__icon_temp_off.svg') center center/contain no-repeat;
-}
-.panel__icon_temp_on {
-  background: url('assets/panel__icon_temp_on.svg') center center/contain no-repeat;
-}
-.panel__icon_light_off {
-  background: url('assets/panel__icon_light_off.svg') center center/contain no-repeat;
-}
-.panel__icon_light_on {
-  background: url('assets/panel__icon_light_on.svg') center center/contain no-repeat;
-}
-.panel__icon_clock {
-  background: url('assets/panel__icon_clock.svg') center center/contain no-repeat;
 }
 
 .card-heading {
@@ -962,28 +700,6 @@ html {
   overflow: scroll;
 }
 
-.video-wrapper {
-  min-height: 300px;
-  position: relative;
-}
-
-.video {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 300px;
-  transition: all 0.5s ease;
-  z-index: 1;
-  -webkit-filter: brightness(100%) contrast(100%);
-  filter: brightness(100%) contrast(100%);
-}
-
-.video_active {
-  z-index: 10;
-  background: #000;
-}
-
 .video-controls-wrap {
   box-sizing: border-box;
   padding: 40px;
@@ -1003,50 +719,12 @@ html {
   transition: height 0.5s ease;
 }
 
-.video-controls_active {
-  height: 92px;
-}
-
 .controls-text {
   float: left;
 }
 
 .video-control {
   float: left;
-}
-
-.video-volume {
-  /* background: url(../img/sound_n.png); */
-  background-size: cover;
-  height: 40px;
-  width: 40px;
-  margin-left: 40px;
-  cursor: pointer;
-}
-
-.video-volume_unmuted {
-  background: green;
-  /* background: url(../img/sound.png); */
-  background-size: cover;
-}
-
-.analyser {
-  position: absolute;
-  z-index: 5;
-  width: 30px;
-  height: 0;
-  bottom: 40px;
-  right: 0;
-  background: green;
-  transition: height 0.5s ease;
-}
-
-.analyser_active {
-  position: fixed;
-  z-index: 15;
-  bottom: 40px;
-  right: 40px;
-  width: 60px;
 }
 
 @media (max-width: 1230px) {
@@ -1111,11 +789,6 @@ html {
     width: 0;
     overflow: hidden;
     transition: all 0.5s ease;
-  }
-
-  .header-menu_active {
-    width: 250px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   }
 
   .header-menu__link {
@@ -1284,10 +957,6 @@ html {
 
   .footer-menu {
     padding-left: 20px;
-  }
-
-  .card-video {
-    overflow: visible;
   }
 
   .video-control {
